# autochat

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTE.md  README.md  pyproject.toml  setup.py  tea.yaml  upload.sh
.github/: dependabot.yml
.github/workflows/: publish.yml  release.yml  test-and-publish.yml  test-release-publish.yml  test-release.yml  test.yml
autochat/: __init__.py  chatgpt.py  model.py  test.py  test_anthropic.py  test_utils.py  utils.py
autochat/examples/: classify_template.txt
docs/: api-reference.md  best-practices.md  providers.md  tool-development.md
examples/: classify_template.txt  demo_image.py  demo_label.py  demo_openai_hack.py  function_label.json
src/autochat/: __init__.py  base.py  chat.py  mcp.py  model.py  test_images.py  utils.py
src/autochat/providers/: anthropic.py  base_provider.py  default.py  gemini.py  openai.py  openai_function_legacy.py  openai_function_shim.py  openai_hack.py  utils.py
tests/: conftest.py  test_add_tool.py  test_anthropic.py  test_autochat.py  test_call_async.py  test_callback_image.py  test_calls.py  test_calls_function.py  test_calls_image.py  test_conversation_flow.py  test_gemini.py  test_none_return.py  test_openai_function_shim.py  test_snap.py  test_terminal_output.py  test_tool_repr.py  test_utils.py
tests/cassettes/test_call_async/: test_ask_async.yaml  test_run_conversation_async.yaml  test_run_conversation_async_multiple_turns_anthropic.yaml  test_run_conversation_async_multiple_turns_openai.yaml  test_run_conversation_sync_wrapper.yaml
tests/cassettes/test_callback_image/: test_anthropic_callback_image.yaml  test_anthropic_callback_image[APIProvider.ANTHROPIC].yaml  test_anthropic_callback_image[APIProvider.OPENAI_FUNCTION_LEGACY].yaml  test_openai_callback_image.yaml
tests/cassettes/test_calls/: test_anthropic_read_book.yaml  test_openai_read_book.yaml
tests/cassettes/test_calls_function/: test_function_calling[APIProvider.ANTHROPIC-claude-3-7-sonnet-latest].yaml  test_function_calling[APIProvider.OPENAI-gpt-4o].yaml  test_function_calling[APIProvider.OPENAI-o1-2024-12-17].yaml
tests/cassettes/test_calls_image/: test_anthropic_read_image.yaml  test_openai_read_image.yaml  test_read_image[APIProvider.ANTHROPIC].yaml  test_read_image[APIProvider.OPENAI].yaml  test_read_image[APIProvider.OPENAI_FUNCTION_LEGACY].yaml
tests/cassettes/test_none_return/: test_anthropic_none_return.yaml  test_openai_none_return.yaml
tests/cassettes/test_openai_function_shim/: test_openai_function_shim.yaml
tests/mcp_clients/: server.py  test_mcp.py
tests/mcp_clients/cassettes/test_mcp/: test_handle_server.yaml  test_mcp_anthropic.yaml  test_mcp_openai.yaml
